--- a/src/less/main.less
+++ b/src/less/main.less
@@ -19,7 +19,7 @@ body {
 }
 
 .header {
-  max-width: 1200px;
+  max-width: 1600px;
   margin: auto;
 }
 
@@ -149,7 +149,7 @@ body {
   }
 
   .pure-menu {
-    max-width: 1200px;
+    max-width: 1600px;
     margin: auto;
   }
 
@@ -179,12 +179,8 @@ body {
 
 .page-content {
   margin: auto;
-  max-width: 1200px;
+  max-width: 1600px;
   position: relative;
-  font-size: 0.85em;
-  @media (min-width: 48em) {
-    font-size: 1em;
-  }
 }
 
 .footer {
@@ -193,7 +189,7 @@ body {
 }
 
 .footer > .pure-g {
-  max-width: 1200px;
+  max-width: 1600px;
   margin: auto;
 }
 
@@ -213,14 +209,14 @@ body {
 .footer > .footer-info > hr:before, hr:after {
   position: absolute;
   content: '';
-  height: 0.25em;
+  height: 3px;
   top: 0;
   left: 0;
   right: 0;
 }
 
 .footer > .footer-info > hr:before {
-  max-width: 1200px;
+  max-width: 1600px;
   .linear-gradient-multi(@gradient-rainbow);
 }
 
