--- a/src/app/index.html
+++ b/src/app/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en" ng-app="app" ng-class="{ 'force-scrollbar' : !isHomePage }"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en" ng-app="app" ng-class="{ 'force-scrollbar' : !isHomePage }"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" ng-app="app" ng-class="{ 'force-scrollbar' : !isHomePage }"> <!--<![endif]-->
-<head>
+  <head>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -44,111 +44,107 @@
     <!-- inject:css -->
     <!-- endinject -->
 
-</head>
-<body ng-controller="AppController as vm">
-
+  </head>
+  <body ng-controller="AppController as vm">
+    <!-- Mobile Button -->
     <div class="mobile-menu-button">
-        <a href="#" ng-click="vm.toggleMobileMenu($event)">
-            <i class="icon-menu" ng-hide="vm.showMobileMenu"></i>
-            <i class="icon-close" ng-show="vm.showMobileMenu"></i>
-        </a>
+      <a href="#" ng-click="vm.toggleMobileMenu($event)">
+        <i class="icon-menu" ng-hide="vm.showMobileMenu"></i>
+        <i class="icon-close" ng-show="vm.showMobileMenu"></i>
+      </a>
     </div>
 
     <section class="header pure-g">
-        <div class="pure-u-1-3">
-            <ul class="header-info">
-                <li><a href=""><span class="icon-location"> 1 Fore Street, London EC2Y 5EJ</span></a></li>
-                <li><a href="tel:0203 468 5972"><span class="icon-phone"> 0203 468 5972</span></a></li>
-                <li><a href="mailto:info@mondotv.co"><span class="icon-paper-plane"> info@mondotv.co</span></a></li>
-            </ul>
-        </div>
-        <div class="pure-u-1-3 header-img">
-            <a ui-sref="home">
-                <img src="https://s3-us-west-2.amazonaws.com/assets.mondotv.co/logos/mondotv-logo-web.jpg" alt="MondoTV"/>
-            </a>
-        </div>
-        <div class="pure-u-1-3">
-            <ul class="header-social">
-                <li><a href=""><span class="icon-vimeo-circled"></span></a></li>
-                <li><a href=""><span class="icon-play-circle"></span></a></li>
-                <li><a href=""><span class="icon-twitter-circled"></span></a></li>
-                <li><a href=""><span class="icon-facebook-circled"></span></a></li>
-                <li><a href=""><span class="icon-linkedin-circled"></span></a></li>
-            </ul>
-        </div>
+      <div class="pure-u-1-3">
+        <ul class="header-info">
+          <li><a href=""><span class="icon-location"> 1 Fore Street, London EC2Y 5EJ</span></a></li>
+          <li><a href="tel:0203 468 5972"><span class="icon-phone"> 0203 468 5972</span></a></li>
+          <li><a href="mailto:info@mondotv.co"><span class="icon-paper-plane"> info@mondotv.co</span></a></li>
+        </ul>
+      </div>
+      <div class="pure-u-1-3 header-img">
+        <a ui-sref="home">
+          <img src="https://s3-us-west-2.amazonaws.com/assets.mondotv.co/logos/mondotv-logo-web.jpg" alt="MondoTV"/>
+        </a>
+      </div>
+      <div class="pure-u-1-3">
+        <ul class="header-social">
+          <li><a href=""><span class="icon-vimeo-circled"></span></a></li>
+          <li><a href=""><span class="icon-play-circle"></span></a></li>
+          <li><a href=""><span class="icon-twitter-circled"></span></a></li>
+          <li><a href=""><span class="icon-facebook-circled"></span></a></li>
+          <li><a href=""><span class="icon-linkedin-circled"></span></a></li>
+        </ul>
+      </div>
     </section>
 
     <nav class="menu-view" ng-class="{'show-mobile-menu': vm.showMobileMenu }" sticky sticky-class="sticky">
-        <div class="pure-menu pure-menu-horizontal">
-            <ul class="pure-menu-list">
-                <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'about'}" ui-sref="about" >Who We Are</a></li>
-                <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'projects'}" ui-sref="projects" >Projects</a></li>
-                <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'clients'}" ui-sref="clients" >Clients</a></li>
-                <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'Process'}" ui-sref="process">How It Works</a></li>
-                <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'blog' ||
-                                             vm.activeSection === 'post' ||
-                                             vm.activeSection === 'postsByTag' ||
-                                             vm.activeSection === 'postsBySearch'}" ui-sref="blog">Blog</a></li>
-                <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'press'}" href="press">Press</a></li>
-                <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'contact'}" href="contact">Contact</a></li>
-                <li class="pure-menu-item"><a><span class="icon-search"></span></a></li>
-            </ul>
-        </div>
+      <div class="pure-menu pure-menu-horizontal">
+        <ul class="pure-menu-list">
+          <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'about'}" ui-sref="about" >Who We Are</a></li>
+          <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'projects'}" ui-sref="projects" >Projects</a></li>
+          <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'clients'}" ui-sref="clients" >Clients</a></li>
+          <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'Process'}" ui-sref="process">How It Works</a></li>
+          <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'blog' || vm.activeSection === 'post' || vm.activeSection === 'postsByTag' || vm.activeSection === 'postsBySearch'}" ui-sref="blog">Blog</a></li>
+          <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'press'}" href="press">Press</a></li>
+          <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'contact'}" href="contact">Contact</a></li>
+          <li class="pure-menu-item"><a><span class="icon-search"></span></a></li>
+        </ul>
+      </div>
     </nav>
 
     <main class="main-view">
-        <div class="content">
-            <div ui-view="main"></div>
+      <div class="pure-g page-content">
+        <div class="pure-u-1" ng-if="vm.bulletins.length">
+          <div class="hero-box" ng-repeat="bulletin in vm.bulletins">
+            <h1>{{ bulletin.title }}</h1>
+            <a ui-sref="post({ id: bulletin.ID, title: bulletin.slug })" class="pure-button">Read More</a>
+          </div>
         </div>
-        <div class="pure-g page-content">
-            <div class="pure-u-1" ng-if="vm.bulletins.length">
-                <hr />
-                <div class="hero-box" ng-repeat="bulletin in vm.bulletins">
-                    <h1>{{ bulletin.title }}</h1>
-                    <a ui-sref="post({ id: bulletin.ID, title: bulletin.slug })" class="pure-button">Read More</a>
-                </div>
-            </div>
-        </div>
+      </div>
+      <div class="content">
+        <div ui-view="main"></div>
+      </div>
     </main>
 
     <footer class="footer">
-        <section class="pure-g footer-info">
-            <hr />
-            <div class="pure-u-1-4 blog">
-                <h4>Blog Updates</h4>
-                <ul>
-                    <li ng-repeat="blog in vm.recentBlogs">{{ blog.title.rendered }}</li>
-                </ul>
-            </div>
-            <div class="pure-u-1-4 twitter">
-                <h4>Twitter</h4>
-            </div>
-            <div class="pure-u-1-4 facebook">
-                <h4>Facebook</h4>
-            </div>
-            <div class="pure-u-1-4 contact">
-                <h4>Contact</h4>
-                <ul>
-                    <li><a href=""><span class="icon-location"> 1 Fore Street, London EC2Y 5EJ</span></a></li>
-                    <li><a href="tel:0203 468 5972"><span class="icon-phone"> 0203 468 5972</span></a></li>
-                    <li><a href="mailto:info@mondotv.co"><span class="icon-paper-plane"> info@mondotv.co</span></a></li>
-                </ul>
-            </div>
-        </section>
-        <section class="pure-g footer-social">
+      <section class="pure-g footer-info">
+        <hr />
+        <div class="pure-u-1-4 blog">
+            <h4>Blog Updates</h4>
             <ul>
-                <li class="pure-button"><span class="icon-vimeo"></span></li>
-                <li class="pure-button"><span class="icon-play"></span></li>
-                <li class="pure-button"><span class="icon-twitter"></span></li>
-                <li class="pure-button"><span class="icon-facebook"></span></li>
-                <li class="pure-button"><span class="icon-linkedin"></span></li>
+                <li ng-repeat="blog in vm.recentBlogs">{{ blog.title.rendered }}</li>
             </ul>
-        </section>
-        <section>
-            <ul>
-                <li></li>
-            </ul>
-        </section>
+        </div>
+        <div class="pure-u-1-4 twitter">
+          <h4>Twitter</h4>
+        </div>
+        <div class="pure-u-1-4 facebook">
+          <h4>Facebook</h4>
+        </div>
+        <div class="pure-u-1-4 contact">
+          <h4>Contact</h4>
+          <ul>
+            <li><a href=""><span class="icon-location"> 1 Fore Street, London EC2Y 5EJ</span></a></li>
+            <li><a href="tel:0203 468 5972"><span class="icon-phone"> 0203 468 5972</span></a></li>
+            <li><a href="mailto:info@mondotv.co"><span class="icon-paper-plane"> info@mondotv.co</span></a></li>
+          </ul>
+        </div>
+      </section>
+      <section class="pure-g footer-social">
+        <ul>
+          <li class="pure-button"><span class="icon-vimeo"></span></li>
+          <li class="pure-button"><span class="icon-play"></span></li>
+          <li class="pure-button"><span class="icon-twitter"></span></li>
+          <li class="pure-button"><span class="icon-facebook"></span></li>
+          <li class="pure-button"><span class="icon-linkedin"></span></li>
+        </ul>
+      </section>
+      <section>
+        <ul>
+          <li></li>
+        </ul>
+      </section>
     </footer>
 
     <script src="../node_modules/lodash/lodash.min.js"></script>
@@ -165,5 +161,5 @@
       ga('send', 'pageview');
     </script>
 
-</body>
+  </body>
 </html>
