--- a/src/less/home.less
+++ b/src/less/home.less
@@ -13,9 +13,14 @@
   .box-shadow(@box-shadow);
 }
 
+.slider-contain {
+  margin: 2em auto !important;
+  overflow: hidden;
+}
+
 .slick-slide {
   position: relative;
-  height: 400px!important;
+  height: 250px!important;
   background-size: cover;
   background-position: center;
 }
@@ -125,20 +130,9 @@
   padding: 0;
 }
 
-.video-list >.video-item:nth-child(4n+1) {
-  padding: 0.25em 1.5em 0.75em 0;
-}
-
-.video-list >.video-item:nth-child(4n+2) {
-  padding: 0.25em 1em 0.75em 0.5em;
-}
-
-.video-list >.video-item:nth-child(4n+3) {
-  padding: 0.25em 0.5em 0.75em 1em;
-}
-
-.video-list >.video-item:nth-child(4n+4) {
-  padding: 0.25em 0em 0.75em 1.5em;
+.video-list >.video-item {
+  margin: 0.5em 0 2em;
+  padding: 0 3em;
 }
 
 .video-list >.video-item img {
