Change home layout.

--- a/src/less/fonts.less
+++ b/src/less/fonts.less
@@ -1,15 +1,5 @@
 @import 'icons';
-@import 'http://fonts.googleapis.com/css?family=Open+Sans:300,400,800';
-
-@font-face {
-		font-family: 'Nexa Light';
-	  src: url('../assets/fonts/NexaLight.eot'); /* IE9 Compat Modes */
-	  src: url('../assets/fonts/NexaLight.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-	       url('../assets/fonts/NexaLight.woff2') format('woff2'), /* Super Modern Browsers */
-	       url('../assets/fonts/NexaLight.woff') format('woff'), /* Pretty Modern Browsers */
-	       url('../assets/fonts/NexaLight.ttf')  format('truetype'), /* Safari, Android, iOS */
-	       url('../assets/fonts/NexaLight.svg#svgNexaLight') format('svg'); /* Legacy iOS */
-}
+@import 'http://fonts.googleapis.com/css?family=Raleway:300,400,700,800';
 
 @font-face {
 		font-family: 'Nexa Bold';
