--- a/src/less/vars.less
+++ b/src/less/vars.less
@@ -21,9 +21,9 @@
 @gradient-rainbow: 90deg, @green 15%, @green 15%, @green 12%, @blue 12%, @blue 32%, @purple 32%, @purple 35%, #34495e 35%, #34495e 55%, @yellow 55%, @yellow 59%, @orange 59%, @orange 63%, @red 63%, @red 82%, #ecf0f1 82%, #ecf0f1 92%, #95a5a6 92%;
 
 // font
-@font-heading: 'Nexa Bold', sans-serif;
-@font-subheading: 'Nexa Light', sans-serif;
-@font-main: 'Open Sans', sans-serif;
+@font-brand: 'Nexa Bold', sans-serif;
+@font-heading: 'Raleway', sans-serif;
+@font-main: 'Raleway', sans-serif;
 @font-weight-light: 300;
 @font-weight-normal: 400;
 @font-weight-bold: 700;
