--- a/src/less/main.less
+++ b/src/less/main.less
@@ -18,6 +18,14 @@ body {
   color: @colour-text-content;
 }
 
+nav {
+  height: auto!important;
+}
+
+nav.sticky ~ .header {
+  margin-top: 2em;
+}
+
 .header {
   max-width: 1600px;
   margin: auto;
@@ -100,60 +108,53 @@ body {
 }
 
 .menu-view {
-  background: #fff;
-  transform: translateX(-100vw);
-  transition: transform 0.3s;
-  position: fixed;
-  z-index: 2;
+  margin-top: 2em;
+  background: @colour-main-view-bg;
+}
 
-  @media (min-width: 35.5em) {
-    padding: 0.5em 0;
-    transform: none;
-    position: inherit;
-    font-size: 1em;
-  }
+.pure-menu {
+  max-width: 1600px;
+  margin: auto;
+}
 
-  .menu {
-    font-size: 2em;
-    ul {
-      list-style-type: none;
-      padding-left: 60px;
-    }
-    a {
-      transition: all 0.3s;
-      color: #ccc;
-      &:focus {
-        outline: none;
-      }
-      &.selected {
-        color: white;
-      }
-    }
-  }
+.pure-menu-horizontal .pure-menu-list {
+  display: block;
+}
 
-  .pure-menu {
-    max-width: 1600px;
-    margin: auto;
-  }
+.pure-menu-list {
+  padding: 0.5em 0 0.6em;
+  text-align: center;
+}
 
-  .pure-menu-horizontal .pure-menu-list {
-    display: block;
-  }
+.pure-menu-item {
+  .transition(~'all 0.5s')
+}
 
-  .pure-menu-list {
-    text-align: center;
-  }
+.pure-menu-item:first-child {
+  display: none;
+}
 
-  .pure-menu-item > a.pure-menu-link {
-    letter-spacing: 0.15em;
-  }
+.pure-menu-item:first-child img {
+  max-width: 150px;
+}
 
-  .pure-menu-active > a.pure-menu-link,
-  a.pure-menu-link:hover,
-  a.pure-menu-link:focus {
-      color: @colour-a-link;
-      background-color: transparent;
-  }
+nav.sticky .pure-menu-item:first-child {
+  display: inline-block;
+}
+
+.pure-menu-item > a.pure-menu-link {
+  margin: 0 0.5em;
+  font-weight: @font-weight-extra-bold;
+  letter-spacing: 0.15em;
+  .border-radius(0.313em);
+  .transition(~'color 0.25s, background-color 0.5s');
+}
+
+.pure-menu-active > a.pure-menu-link,
+a.pure-menu-link:hover,
+a.pure-menu-link:focus {
+    color: @colour-main-view-bg;
+    background-color: @colour-a-link;
 }
 
 .main-view {
