--- a/src/less/fonts.less
+++ b/src/less/fonts.less
@@ -1,5 +1,5 @@
 @import 'icons';
-@import 'http://fonts.googleapis.com/css?family=Raleway:300,400,700,800';
+@import 'http://fonts.googleapis.com/css?family=Lato:300,400,700,900';
 
 @font-face {
 		font-family: 'Nexa Bold';
