--- a/src/less/vars.less
+++ b/src/less/vars.less
@@ -22,12 +22,12 @@
 
 // font
 @font-brand: 'Nexa Bold', sans-serif;
-@font-heading: 'Raleway', sans-serif;
-@font-main: 'Raleway', sans-serif;
+@font-heading: 'Lato', sans-serif;
+@font-main: 'Lato', sans-serif;
 @font-weight-light: 300;
 @font-weight-normal: 400;
 @font-weight-bold: 700;
-@font-weight-extra-bold: 800;
+@font-weight-extra-bold: 900;
 
 // other
 @box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
