Update home template.

--- a/src/less/home.less
+++ b/src/less/home.less
@@ -4,12 +4,13 @@
 }
 
 .hero-box {
-  margin-bottom: 2em;
+  margin: 1em auto;
+  max-width: 1600px;
   text-align: center;
   .linear-gradient(45deg, @colour-a-link, @colour-a-hover);
   color: #fff;
   .border-radius(0.188em);
-  padding: 1.25em;
+  padding: 0.5em;
   .box-shadow(@box-shadow);
 }
 
