--- a/src/less/main.less
+++ b/src/less/main.less
@@ -23,7 +23,7 @@ nav {
 }
 
 nav.sticky ~ .header {
-  margin-top: 2em;
+  margin-top: 35px;
 }
 
 .header {
@@ -109,7 +109,7 @@ nav.sticky ~ .header {
 }
 
 .menu-view {
-  margin-top: 2em;
+  margin-top: 35px;
   background: @colour-main-view-bg;
 }
 
