--- a/src/app/home/home.view.html
+++ b/src/app/home/home.view.html
@@ -1,12 +1,9 @@
 <section class="pure-g page-content" ng-controller="HomeController as vm">
     <div class="pure-u-1">
         <ul class="pure-g video-list">
-            <li ng-repeat="video in vm.allVideos" class="pure-u-1-5 video-item">
-                <a ui-sref="post({ id: video.ID, title: video.slug })">
-                    <img class="pure-img" ng-src="{{ video.images.value.media_details.sizes.medium.source_url }}" alt="{{ video.title.rendered }}" />
-                    <p>
-                      {{ video.tag }}
-                    </p>
+            <li ng-repeat="video in vm.allVideos" class="pure-u-1-5 video-item" ng-class="video.tags">
+                <a ui-sref="post({ id: video.id, title: video.slug })">
+                    <img class="pure-img" ng-src="{{ video.featured_media.sizes.medium.source_url }}" alt="{{ video.title.rendered }}" />
                 </a>
             </li>
         </ul>
@@ -18,7 +15,7 @@
 
 <section class="slider-contain page-content">
     <slick class="featured-articles" infinite="true" autoplay="true" dots="true" arrows="true" data="vm.allFeatured" ng-if="vm.allFeatured.length">
-        <div ng-repeat="post in vm.allFeatured" style="background-image:url({{ post.images.value.media_details.sizes.large.source_url }})">
+        <div ng-repeat="post in vm.allFeatured" style="background-image:url({{ post.featured_media.sizes.large.source_url }})">
             <div class="slide-content">
                 <h1>{{ post.title.rendered }}</h1>
                 <a class="pure-button pure-button-primary" ui-sref="post({ id: post.ID, title: post.slug })">Read More</a>
