--- a/src/less/vars.less
+++ b/src/less/vars.less
@@ -1,8 +1,8 @@
 // colours
 @colour-a-link: #59b7d3;
 @colour-a-hover: #88cae0;
-@colour-text-deemphasize: #777;
-@colour-text-content: #444;
+@colour-text-deemphasize: #888;
+@colour-text-content: #555;
 @colour-text-dark: #333;
 
 @colour-main-view-bg: #fff;
@@ -11,14 +11,14 @@
 @colour-border-dark-bg: rgba(255,255,255,0.2);
 @colour-border-light-bg: rgba(0,0,0,0.1);
 
-@red: rgb(255, 0, 0);
-@orange: rgb(253, 127, 11);
-@yellow: rgb(255,204,43);
-@green: rgb(22, 243, 3);
-@blue: rgb(46,211,217);
-@purple: rgb(190, 11, 224);
+@orange: #fe953a;
+@dark-orange: #f26419;
+@yellow: #fedd00;
+@cyan: #3dcaff;
+@blue: #3b72f3;
+@dark-blue: #2f4858;
 
-@gradient-rainbow: 90deg, @green 15%, @green 15%, @green 12%, @blue 12%, @blue 32%, @purple 32%, @purple 35%, #34495e 35%, #34495e 55%, @yellow 55%, @yellow 59%, @orange 59%, @orange 63%, @red 63%, @red 82%, #ecf0f1 82%, #ecf0f1 92%, #95a5a6 92%;
+@gradient-rainbow: 90deg, @cyan 15%, @cyan 15%, @cyan 12%, @blue 12%, @blue 32%, @dark-blue 32%, @dark-blue 35%, #34495e 35%, #34495e 55%, @yellow 55%, @yellow 59%, @orange 59%, @orange 63%, @dark-orange 63%, @dark-orange 82%, #ecf0f1 82%, #ecf0f1 92%, #95a5a6 92%;
 
 // font
 @font-brand: 'Nexa Bold', sans-serif;
