--- a/src/app/index.html
+++ b/src/app/index.html
@@ -58,13 +58,13 @@
           <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'blog' || vm.activeSection === 'post' || vm.activeSection === 'postsByTag' || vm.activeSection === 'postsBySearch'}" ui-sref="blog">Blog</a></li>
           <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'press'}" href="press">Press</a></li>
           <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'contact'}" href="contact">Contact</a></li>
-          <li class="pure-menu-item"><a><span class="icon-search"></span></a></li>
         </ul>
       </div>
     </nav>
 
     <section class="header pure-g">
       <div class="pure-u-1-3">
+        <a class="pure-button">Contact</a>
         <ul class="header-info">
           <li><a href=""><span class="icon-location"> 1 Fore Street, London EC2Y 5EJ</span></a></li>
           <li><a href="tel:0203 468 5972"><span class="icon-phone"> 0203 468 5972</span></a></li>
@@ -77,6 +77,7 @@
         </a>
       </div>
       <div class="pure-u-1-3">
+        <a class="pure-button">@mondotvuk</a>
         <ul class="header-social">
           <li><a href=""><span class="icon-vimeo-circled"></span></a></li>
           <li><a href=""><span class="icon-play-circle"></span></a></li>
