--- a/src/less/home.less
+++ b/src/less/home.less
@@ -103,9 +103,8 @@
 
 .slick-slide > .slide-content > .pure-button,
 .hero-box > .pure-button {
-  background: transparent;
   color: #fff;
-  border: 1px solid #fff;
+  border-color: #fff;
 }
 
 .slick-slide > .slide-content > .pure-button:hover,
@@ -132,7 +131,8 @@
 }
 
 .video-list >.video-item {
-  margin: 0.5em 0 2em;
+  margin: 0.5em 0 1em;
+  .transition(~'all 0.5s cubic-bezier(.36,-0.64,.34,1.76)');
 }
 
 .video-list >.video-item img {
