--- a/src/less/main.less
+++ b/src/less/main.less
@@ -27,7 +27,7 @@ nav.sticky ~ .header {
 }
 
 .header {
-  max-width: 1600px;
+  max-width: 1400px;
   margin: auto;
 }
 
@@ -52,6 +52,11 @@ nav.sticky ~ .header {
 
 .header a:not(.pure-button) {
   letter-spacing: 0.15em;
+}
+
+.header a.pure-button {
+  font-size: 85%;
+  .border-radius(0.294em);
 }
 
 .header-info > li {
@@ -114,7 +119,7 @@ nav.sticky ~ .header {
 }
 
 .pure-menu {
-  max-width: 1600px;
+  max-width: 1400px;
   margin: auto;
 }
 
@@ -164,7 +169,7 @@ a.pure-menu-link:focus {
 
 .page-content {
   margin: auto;
-  max-width: 1600px;
+  max-width: 1400px;
   position: relative;
 }
 
@@ -174,7 +179,7 @@ a.pure-menu-link:focus {
 }
 
 .footer > .pure-g {
-  max-width: 1600px;
+  max-width: 1400px;
   margin: auto;
 }
 
@@ -194,7 +199,7 @@ a.pure-menu-link:focus {
 .footer > .footer-info > hr:before, hr:after {
   position: absolute;
   content: '';
-  height: 3px;
+  height: 2px;
   top: 0;
   left: 0;
   right: 0;
@@ -308,7 +313,14 @@ button {
   .border-radius(0.313em);
 }
 
-.pure-button:hover {
+.pure-button.pure-button-primary {
+  background: @colour-a-link;
+  border-color: @colour-a-link;
+}
+
+.pure-button:hover,
+.pure-button:active,
+.pure-button:focus {
   background: transparent;
   color: @colour-a-link;
   border-color: @colour-a-link;
