--- a/src/less/icons.less
+++ b/src/less/icons.less
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 
-/* untitled-font-2 */
+/* icon-font */
 @font-face {
-  font-family: "untitled-font-2";
+  font-family: "icon-font";
   src:url("https://file.myfontastic.com/mxT6RVUeBkddoReonVueaS/fonts/1472590744.eot");
   src:url("https://file.myfontastic.com/mxT6RVUeBkddoReonVueaS/fonts/1472590744.eot?#iefix") format("embedded-opentype"),
     url("https://file.myfontastic.com/mxT6RVUeBkddoReonVueaS/fonts/1472590744.woff") format("woff"),
@@ -13,7 +13,7 @@
 }
 
 [data-icon]:before {
-  font-family: "untitled-font-2" !important;
+  font-family: "icon-font" !important;
   content: attr(data-icon);
   font-style: normal !important;
   font-weight: normal !important;
@@ -27,7 +27,7 @@
 
 [class^="icon-"]:before,
 [class*=" icon-"]:before {
-  font-family: "untitled-font-2" !important;
+  font-family: "icon-font" !important;
   font-style: normal !important;
   font-weight: normal !important;
   font-variant: normal !important;
