--- a/src/less/main.less
+++ b/src/less/main.less
@@ -8,11 +8,14 @@
 *,
 *:before,
 *:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
 html,
 body {
+  padding-top: 2em;
   font-family: @font-main;
   font-weight: @font-weight-normal;
   color: @colour-text-content;
@@ -20,10 +23,6 @@ body {
 
 nav {
   height: auto!important;
-}
-
-nav.sticky ~ .header {
-  margin-top: 35px;
 }
 
 .header {
@@ -50,28 +49,18 @@ nav.sticky ~ .header {
   color: @colour-a-hover;
 }
 
-.header a:not(.pure-button) {
-  letter-spacing: 0.15em;
-}
-
-.header a.pure-button {
-  font-size: 85%;
-  .border-radius(0.294em);
-}
-
-.header-info > li {
-  list-style: none;
-  font-size: 0.8em
-}
-
 .header-img {
-  padding: 4em 0 6em;
+  padding: 5em 0 3em;
   text-align:center;
 }
 
 .header-img > img {
   display: inline-block;
   padding: 1em 0 0.75em;
+}
+
+.header-img > .strapline {
+  margin-top: 3em;
 }
 
 .header-social {
@@ -114,7 +103,6 @@ nav.sticky ~ .header {
 }
 
 .menu-view {
-  margin-top: 35px;
   background: @colour-main-view-bg;
 }
 
@@ -133,23 +121,24 @@ nav.sticky ~ .header {
 }
 
 .pure-menu-item {
-  .transition(~'all 0.5s')
+  .transition(~'all 0.5s');
 }
 
-.pure-menu-item:first-child {
-  display: none;
-}
-
-.pure-menu-item:first-child img {
-  max-width: 150px;
-}
-
-nav.sticky .pure-menu-item:first-child {
+.pure-menu-item.menu-logo {
   display: inline-block;
+  width: 0;
+  height: 40px;
+  .transition(~'all 0.3s ease-out');
+}
+
+nav.sticky .pure-menu-item.menu-logo {
+  width: 0;
+  .animation(~'menuLogoIn 0.3s ease-in');
 }
 
 .pure-menu-item > a.pure-menu-link {
   margin: 0 0.5em;
+  padding: 0.25em 0.875em;
   font-weight: @font-weight-extra-bold;
   letter-spacing: 0.15em;
   .border-radius(0.313em);
@@ -163,6 +152,17 @@ a.pure-menu-link:focus {
     background-color: @colour-a-link;
 }
 
+.bulletin {
+  margin: 1em auto;
+  max-width: 800px;
+  text-align: center;
+  .linear-gradient(45deg, @colour-a-link, @colour-a-hover);
+  color: #fff;
+  .border-radius(0.188em);
+  padding: 0.5em;
+  .box-shadow(@box-shadow);
+}
+
 .main-view {
   background: @colour-main-view-bg;
 }
@@ -171,6 +171,10 @@ a.pure-menu-link:focus {
   margin: auto;
   max-width: 1400px;
   position: relative;
+
+  @media (max-width: 1400px) {
+    padding: 0 1em;
+  }
 }
 
 .footer {
@@ -183,20 +187,14 @@ a.pure-menu-link:focus {
   margin: auto;
 }
 
-.footer > .pure-g > .pure-u-1-4 {
-  margin: 2em 0;
-  padding: 0 1.5em;
-}
-
-.footer > .footer-info > hr {
+.footer > .footer-about > hr {
   position: relative;
   margin: 0;
   width: 100%;
-  background: @colour-text-dark;
   border: none;
 }
 
-.footer > .footer-info > hr:before, hr:after {
+.footer > .footer-about > hr:before, hr:after {
   position: absolute;
   content: '';
   height: 2px;
@@ -207,12 +205,8 @@ a.pure-menu-link:focus {
 }
 
 .footer > .footer-info > hr:before {
-  max-width: 1600px;
+  max-width: 1400px;
   .linear-gradient-multi(@gradient-rainbow);
-}
-
-.footer > .footer-info > .pure-u-1-4:not(:nth-child(5)) {
-  border-right: 1px solid @colour-border-dark-bg
 }
 
 .footer > .footer-social {
@@ -304,6 +298,19 @@ button {
   outline-color: transparent;
 }
 
+.pure-dropdown {
+
+}
+
+.dropdown-menu {
+  display: inline-block;
+  margin: none;
+  list-style: none;
+  padding: 0.313em 0.875em;
+  border: 1px solid @colour-text-deemphasize;
+  .border-radius(0.313em);
+}
+
 .pure-button {
   padding: 0.313em 0.875em;
   background: transparent;
@@ -339,6 +346,24 @@ a:hover {
   color: @colour-a-hover;
 }
 
+input[type=radio] {
+	visibility: hidden;
+  height: 0;
+  width: 0;
+}
+
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  height: 30px;
+}
+
+select:after {
+  content: '\6d';
+  font-family: 'icon-font';
+}
+
 .page-header {
   min-height: 50px;
 }
@@ -365,11 +390,158 @@ label[for="pure-file"] {
   cursor: pointer;
 }
 
+.brand {
+  color: @colour-a-link !important;
+  border-color: @colour-a-link !important;
+}
+
+.hover-brand:hover,
+input:checked + .hover-brand {
+  color: @colour-a-link !important;
+  border-color: @colour-a-link !important;
+}
+
+.orange {
+  color: @orange !important;
+  border-color: @orange !important;
+}
+
+.hover-orange:hover,
+input:checked + .hover-orange {
+  color: @orange !important;
+  border-color: @orange !important;
+}
+
+.dark-orange {
+  color: @dark-orange !important;
+  border-color: @dark-orange !important;
+}
+
+.hover-dark-orange:hover,
+input:checked + .hover-dark-orange {
+  color: @dark-orange !important;
+  border-color: @dark-orange !important;
+}
+
+.yellow {
+  color: @yellow !important;
+  border-color: @yellow !important;
+}
+
+.hover-yellow:hover,
+input:checked + .hover-yellow {
+  color: @yellow !important;
+  border-color: @yellow !important;
+}
+
+.cyan {
+  color: @cyan !important;
+  border-color: @cyan !important;
+}
+
+.hover-cyan:hover,
+input:checked + .hover-cyan {
+  color: @cyan !important;
+  border-color: @cyan !important;
+}
+
+.blue {
+  color: @blue !important;
+  border-color: @blue !important;
+}
+
+.hover-blue:hover,
+input:checked + .hover-blue {
+  color: @blue !important;
+  border-color: @blue !important;
+}
+
+.dark-blue {
+  color: @dark-blue !important;
+  border-color: @dark-blue !important;
+}
+
+.hover-dark-blue:hover,
+input:checked + .hover-dark-blue {
+  color: @dark-blue !important;
+  border-color: @dark-blue !important;
+}
+
+.ng-enter,
+.ng-move {
+  .transition(~'all 0.5s linear;');
+  opacity: 0;
+}
+
+.ng-enter.ng-enter-active,
+.ng-move.ng-move-active {
+  opacity: 1;
+}
+
+.ng-leave {
+  .animation(~'fadeOut 0.3s');
+}
+
 @keyframes fadeIn {
   0% {
     opacity: 0;
   }
   100% {
     opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes menuLogoIn {
+  0% {
+    width: 0;
+    background: none;
+  }
+  95% {
+    width: 130px;
+  }
+  100% {
+    background: url('https://s3-us-west-2.amazonaws.com/assets.mondotv.co/logos/menu-logo-animated.gif') no-repeat center center;
+    background-size:cover;
+  }
+}
+
+@-webkit-keyframes menuLogoIn {
+  0% {
+    width: 0;
+    background: none;
+  }
+  95% {
+    width: 130px;
+  }
+  100% {
+    background: url('https://s3-us-west-2.amazonaws.com/assets.mondotv.co/logos/menu-logo-animated.gif') no-repeat center center;
+    background-size:cover;
   }
 }
