--- a/src/less/icons.less
+++ b/src/less/icons.less
@@ -1,13 +1,13 @@
 @charset "UTF-8";
-
 /* icon-font */
+
 @font-face {
   font-family: "icon-font";
-  src:url("https://file.myfontastic.com/mxT6RVUeBkddoReonVueaS/fonts/1472590744.eot");
-  src:url("https://file.myfontastic.com/mxT6RVUeBkddoReonVueaS/fonts/1472590744.eot?#iefix") format("embedded-opentype"),
-    url("https://file.myfontastic.com/mxT6RVUeBkddoReonVueaS/fonts/1472590744.woff") format("woff"),
-    url("https://file.myfontastic.com/mxT6RVUeBkddoReonVueaS/fonts/1472590744.ttf") format("truetype"),
-    url("https://file.myfontastic.com/mxT6RVUeBkddoReonVueaS/fonts/1472590744.svg#1472590744") format("svg");
+  src:url("https://file.myfontastic.com/mxT6RVUeBkddoReonVueaS/fonts/1473792592.eot");
+  src:url("https://file.myfontastic.com/mxT6RVUeBkddoReonVueaS/fonts/1473792592.eot?#iefix") format("embedded-opentype"),
+    url("https://file.myfontastic.com/mxT6RVUeBkddoReonVueaS/fonts/1473792592.woff") format("woff"),
+    url("https://file.myfontastic.com/mxT6RVUeBkddoReonVueaS/fonts/1473792592.ttf") format("truetype"),
+    url("https://file.myfontastic.com/mxT6RVUeBkddoReonVueaS/fonts/1473792592.svg#1473792592") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -37,85 +37,82 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.icon-location:before {
+    content: "\68";
+}
 
-.icon-skype-circled:before {
+.icon-paper-plane:before {
+    content: "\69";
+}
+
+.icon-phone:before {
+    content: "\6a";
+}
+
+.icon-dot-3:before {
+    content: "\6c";
+}
+
+.icon-cancel:before {
+    content: "\6e";
+}
+
+.icon-down-open:before {
+    content: "\6d";
+}
+
+.icon-left-open:before {
+    content: "\67";
+}
+
+.icon-right-open:before {
+    content: "\6b";
+}
+
+.icon-up-open:before {
+    content: "\66";
+}
+
+.icon-play-circle:before {
+    content: "\71";
+}
+
+.icon-search:before {
+    content: "\72";
+}
+
+.icon-vimeo:before {
+    content: "\73";
+}
+
+.icon-twitter:before {
+    content: "\74";
+}
+
+.icon-skype:before {
+    content: "\75";
+}
+
+.icon-linkedin:before {
+    content: "\76";
+}
+
+.icon-pinterest:before {
+    content: "\77";
+}
+
+.icon-facebook:before {
+    content: "\78";
+}
+
+.icon-play:before {
+    content: "\79";
+}
+
+.icon-tumblr:before {
   content: "\61";
 }
-.icon-pinterest-circled:before {
+
+.icon-plus:before {
   content: "\62";
-}
-.icon-twitter-circled:before {
-  content: "\63";
-}
-.icon-tumblr-circled:before {
-  content: "\64";
-}
-.icon-location:before {
-  content: "\68";
-}
-.icon-paper-plane:before {
-  content: "\69";
-}
-.icon-phone:before {
-  content: "\6a";
-}
-.icon-dot-3:before {
-  content: "\6c";
-}
-.icon-cancel:before {
-  content: "\6e";
-}
-.icon-down-open:before {
-  content: "\6d";
-}
-.icon-left-open:before {
-  content: "\67";
-}
-.icon-right-open:before {
-  content: "\6b";
-}
-.icon-up-open:before {
-  content: "\66";
-}
-.icon-linkedin-circled:before {
-  content: "\65";
-}
-.icon-vimeo-circled:before {
-  content: "\6f";
-}
-.icon-facebook-circled:before {
-  content: "\70";
-}
-.icon-play-circle:before {
-  content: "\71";
-}
-.icon-search:before {
-  content: "\72";
-}
-.icon-vimeo:before {
-  content: "\73";
-}
-.icon-twitter:before {
-  content: "\74";
-}
-.icon-skype:before {
-  content: "\75";
-}
-.icon-linkedin:before {
-  content: "\76";
-}
-.icon-pinterest:before {
-  content: "\77";
-}
-.icon-facebook:before {
-  content: "\78";
-}
-.icon-play:before {
-  content: "\79";
-}
-.icon-left-open-big:before {
-  content: "\7a";
-}
-.icon-right-open-big:before {
-  content: "\41";
 }
