--- a/src/app/home/home.view.html
+++ b/src/app/home/home.view.html
@@ -2,48 +2,11 @@
   <div class="pure-u-1 filter-list">
     <label>
       <input type="radio" ng-model="filters.tags" value="" />
-      <span class="pure-button hover-brand" ng-mouseenter="v.randomColour($event, true)" ng-mouseleave="vm.randomColour($event, false)">All</span>
+      <span class="pure-button hover-brand">All</span>
     </label>
-    <label>
+    <label ng-repeat="tag in vm.categories">
       <input type="radio" ng-model="filters.tags" value="category-action" />
-      <span class="pure-button hover-orange">Action</span>
-    </label>
-    <label>
-      <input type="radio" ng-model="filters.tags" value="category-adventure" />
-      <span class="pure-button hover-cyan">Adventure</span>
-    </label>
-    <label>
-      <input type="radio" ng-model="filters.tags" value="category-comedy" />
-      <span class="pure-button hover-dark-blue">Comedy</span>
-    </label>
-    <label>
-      <input type="radio" ng-model="filters.tags" value="category-crime" />
-      <span class="pure-button hover-dark-orange">Crime</span>
-    </label>
-    <label>
-      <input type="radio" ng-model="filters.tags" value="category-drama" />
-      <span class="pure-button hover-yellow">Drama</span>
-    </label>
-    <br />
-    <label>
-      <input type="radio" ng-model="filters.tags" value="category-family" />
-      <span class="pure-button hover-yellow">Family</span>
-    </label>
-    <label>
-      <input type="radio" ng-model="filters.tags" value="category-fantasy" />
-      <span class="pure-button hover-blue">Fantasy</span>
-    </label>
-    <label>
-      <input type="radio" ng-model="filters.tags" value="category-history" />
-      <span class="pure-button hover-dark-orange">History</span>
-    </label>
-    <label>
-      <input type="radio" ng-model="filters.tags" value="category-scifi" />
-      <span class="pure-button hover-cyan">Sci-Fi</span>
-    </label>
-    <label>
-      <input type="radio" ng-model="filters.tags" value="category-thriller" />
-      <span class="pure-button hover-dark-blue">Thriller</span>
+      <span class="pure-button hover-orange">{{ tag.name }}</span>
     </label>
     <select class="pure-button hover-blue" ng-model="filters.tags">
       <option value="">All Brands</option>
@@ -54,9 +17,8 @@
     </select>
   </div>
   <div class="pure-u-1">
-    {{ filters.tags }}
-    <ul class="pure-g video-list">
-      <li ng-repeat="video in vm.allVideos | filter:filters.tags | filter:filters.categories" class="pure-u-1-5 video-item" ng-class="video.tags">
+    <ul class="pure-g video-list" masonry="true">
+      <li ng-repeat="video in vm.allVideos | filter:filters.tags | filter:filters.categories" class="pure-u-1-5 video-item ng-cloak" ng-class="video.tags">
         <a ui-sref="post({ id: video.id, title: video.slug })">
           <img class="pure-img" ng-src="{{ video.featured_media.sizes.medium.source_url }}" alt="{{ video.title.rendered }}" />
         </a>
@@ -64,8 +26,8 @@
     </ul>
   </div>
   <div class="pure-u-1 button-section">
-    <img class="loading-icon" src="https://s3-us-west-2.amazonaws.com/assets.mondotv.co/logos/loading.gif" alt="Loading" ng-if="vm.loading" /><br />
-    <a ng-click="vm.fetchMoreVideos()" class="pure-button pure-button-primary" ng-if="vm.moreVideos">More</a>
+    <img class="loading-icon" src="https://s3-us-west-2.amazonaws.com/assets.mondotv.co/logos/loading.gif" alt="Content loading" ng-if="vm.loading" /><br />
+    <a ng-click="vm.fetchMoreVideos()" class="pure-button pure-button-primary" ng-if="vm.moreVideos">More Videos <span class="icon-plus"></span></a>
   </div>
 </section>
 
