--- a/src/less/home.less
+++ b/src/less/home.less
@@ -1,5 +1,6 @@
 .filter-list {
-  margin-bottom: 2em;
+  margin: 0 auto 2em;
+  max-width: 600px;
   text-align: center;
 }
 
@@ -49,17 +50,31 @@
 }
 
 .button-section {
+  position: relative;
+  margin:0 0 4em;
   text-align: center;
 }
 
 .button-section > .loading-icon {
-  margin: 1em 0;
-  display: inline-block;
+  position: absolute;
+  bottom: 200%;
+  left: 50%;
+  .transform(~'translateX(-50%)');
   height: 80px;
+  .border-radius(0.313em);
+}
+
+.button-section .pure-button {
+  padding-right: 0.6em;
+}
+
+.button-section .icon-plus {
+  line-height: 0.9em;
+  vertical-align: middle;
 }
 
 .slider-contain {
-  margin: 2em auto !important;
+  margin: 0 auto !important;
   padding: 0 !important;
   max-width: 1000px !important;
   .border-radius(0.5em);
@@ -166,4 +181,38 @@
 
 .slick-slide > .slide-content > .pure-button {
   margin-right: 0.5em;
+}
+
+
+
+
+
+.masonry,
+.masonry li { /* apply before masonry add class */
+    position: absolute; /* important to add it before enter animation start */
+
+    -webkit-transition-duration: .7s;
+    transition-duration: .7s;
+
+    -webkit-transition-property: all;
+    transition-property: all;
+}
+
+.masonry .masonry-enter { /* limit animated properties for entering elements */
+    -webkit-transition-property: -webkit-transform, opacity;
+    transition-property: transform, opacity;
+}
+
+.masonry-enter,
+.masonry-leave.masonry-leave-active {
+    opacity: 0;
+    -webkit-transform: scale(0.1);
+    transform: scale(0.1);
+}
+
+.masonry-leave,
+.masonry-enter.masonry-enter-active {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    transform: scale(1);
 }
