--- a/src/less/home.less
+++ b/src/less/home.less
@@ -22,8 +22,9 @@
   padding: 0;
 }
 
-.video-list >.video-item {
+.video-list > .video-item {
   margin: 0.5em 0 1em;
+  color: transparent;
   .transition(~'all 0.5s cubic-bezier(.36,-0.64,.34,1.76)');
 }
 
