--- a/src/app/index.html
+++ b/src/app/index.html
@@ -69,13 +69,13 @@
   </head>
   <body ng-controller="AppController as vm" class="{{ vm.activeSection }}">
 
-    <nav class="menu-view" ng-class="{'show-mobile-menu': vm.showMobileMenu }" sticky sticky-class="sticky">
+    <nav class="menu-view" sticky sticky-class="sticky">
       <div class="pure-menu pure-menu-horizontal">
         <ul class="pure-menu-list">
           <li class="pure-menu-item menu-logo"><a href="/"></a></li>
           <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'process'}" href="process">How It Works</a></li>
-          <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'projects'}" ui-sref="projects" >Projects</a></li>
-          <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'clients'}" ui-sref="clients" >Clients</a></li>
+          <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'projects'}" href="projects" >Projects</a></li>
+          <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'clients'}" href="clients" >Clients</a></li>
           <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'blog' || vm.activeSection === 'post' || vm.activeSection === 'postsByTag' || vm.activeSection === 'postsBySearch'}" ui-sref="blog">Blog</a></li>
           <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'contact'}" href="contact">Contact</a></li>
         </ul>
@@ -97,7 +97,7 @@
         <a ui-sref="home">
           <img src="https://s3-us-west-2.amazonaws.com/assets.mondotv.co/logos/mondotv-logo-web.jpg" alt="MondoTV"/>
         </a>
-        <h4 class="strapline">This is the MondoTV strapline, which is roughly around this length. Please replace me before launching the site!</h4>
+        <h4 class="strapline">We make web based branded video content. Tech focused, Doctor approved. Check it out.</h4>
       </div>
       <div class="pure-u-1-3">
         <div class="pure-dropdown">
@@ -117,14 +117,14 @@
       <div class="pure-g page-content ng-cloak">
         <div class="pure-u-1" ng-if="vm.bulletins.length">
           <div class="bulletin" ng-repeat="bulletin in vm.bulletins">
-            <h1>{{ bulletin.title }}</h1>
+            <h1>{{ ::bulletin.title }}</h1>
             <a ui-sref="post({ id: bulletin.ID, title: bulletin.slug })" class="pure-button">Read More</a>
           </div>
         </div>
       </div>
       <div class="content ng-cloak">
         <div ui-view="main">
-          <div class="main-loading-container">
+          <div class="main-loading-container" ng-if="false">
             <img class="main-loading-icon" src="https://s3-us-west-2.amazonaws.com/assets.mondotv.co/logos/loading.gif" alt="MondoTV.co is loading..." />
           </div>
         </div>
@@ -135,7 +135,7 @@
       <hr />
       <section class="pure-g footer-about">
         <div class="about">
-          <h2>{{ vm.about[0].title.rendered }}</h2>
+          <h2>{{ ::vm.about[0].title.rendered }}</h2>
         </div>
       </section>
       <section class="pure-g footer-social">
@@ -152,9 +152,6 @@
         <p>1 Fore Street, London EC2Y 5EJ</p>
       </section>
     </footer>
-
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/masonry/2.1.08/jquery.masonry.min.js"></script
 
     <!-- inject:js -->
     <!-- endinject -->
