--- a/src/less/main.less
+++ b/src/less/main.less
@@ -198,6 +198,12 @@ body.projects .main-view {
   }
 }
 
+.footer h2 {
+  letter-spacing: normal;
+  text-transform: uppercase;
+  text-align: center;
+}
+
 .footer > .pure-g {
   max-width: 1400px;
   margin: auto;
@@ -269,6 +275,15 @@ body.projects .main-view {
   margin: 0;
 }
 
+.footer-terms {
+  font-size: 0.75em;
+  list-style: none;
+}
+
+.footer-terms > li {
+  display: inline-block;
+}
+
 h1 {
   font-weight: normal;
   text-transform: uppercase;
@@ -282,7 +297,7 @@ h1, h2, h3 {
   font-family: @font-brand;
 }
 
-h4, h5, h6 {
+h4, h5, h6, p, ul, ol, li {
   font-family: @font-heading;
 }
 
