--- a/src/app/index.html
+++ b/src/app/index.html
@@ -87,7 +87,7 @@
         <div class="pure-dropdown">
           <a class="pure-button">Contact</a>
           <ul class="header-info dropdown-menu">
-            <li><a href=""><span class="icon-location"> 1 Fore Street, London EC2Y 5EJ</span></a></li>
+            <li><a href=""><span class="icon-location"> 20-22 Wenlock Road, London, England, N1 7GU</span></a></li>
             <li><a href="tel:0203 468 5972"><span class="icon-phone"> 0203 468 5972</span></a></li>
             <li><a href="mailto:info@mondotv.co"><span class="icon-paper-plane"> info@mondotv.co</span></a></li>
           </ul>
@@ -133,9 +133,10 @@
 
     <footer class="footer ng-cloak">
       <hr />
-      <section class="pure-g footer-about">
+      <section class="footer-about">
         <div class="about">
           <h2>{{ ::vm.about[0].title.rendered }}</h2>
+          <div class="pure-g" ng-bind-html="vm.about[0].content"></div>
         </div>
       </section>
       <section class="pure-g footer-social">
@@ -149,7 +150,14 @@
       </section>
       <section class="footer-mondo">
         <p>MondoTV</p>
-        <p>1 Fore Street, London EC2Y 5EJ</p>
+        <p>20-22 Wenlock Road, London, England, N1 7GU</p>
+        <ul class="footer-terms">
+          <li>&copy; MondoTV Ltd. 2016.</li>
+          <li> | </li>
+          <li>Terms:</li>
+          <li><a href="" class="pure-button">Conditions</a></li>
+          <li><a href="" class="pure-button">Service</a></li>
+        </ul>
       </section>
     </footer>
 
