--- a/src/less/main.less
+++ b/src/less/main.less
@@ -284,6 +284,11 @@ body.projects .main-view {
   display: inline-block;
 }
 
+.footer-terms .pure-button {
+  padding: 0.2em 0.313em 0.25em;
+  color: @colour-text-deemphasize;
+}
+
 h1 {
   font-weight: normal;
   text-transform: uppercase;
